--- a/Assets/contact_style.css
+++ b/Assets/contact_style.css
@@ -22,69 +22,194 @@
 }
 
 html {
+   font-family: 'Poppins', sans-serif;
+   font-size: 10px;
+   width: 100vw;
+   overflow-x: hidden;
+   scroll-behavior: smooth;
+}
+
+*{
+   text-decoration: none;
+   list-style-type: none;
+   list-style: none;
+   box-sizing: border-box; 
 }
 
 body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
    background-color: var(--var-bg-color);
-   background-image: url(images/bg-texture.png);
-   scroll-behavior: smooth;
-   padding: 20px 100px 150px;
+   background-image: url(images/contact-bg.jpg);
    height: 100vh;
    width: 100vw;
+   /* background: url(images/contact-bg.jpg) no-repeat center center/cover fixed; */
+   /* filter: brightness(50%); */
+   list-style: none;
+   display: flex;
+   flex-direction: column;
 }
 
+nav {
+   font-size: 20px;
+   width: 100vw;
+   height: 55px;
+   /* background-color: var(--var-bg-color); */
+   background-color: black;
+   position: fixed;
+   z-index: 10;
+   padding-left: 100px;
+   padding-right: 100px;
+   /* background-image: url(images/bg-texture.png); */
+   /* box-shadow: 0px 5px 10px #000000b7 ; */
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   transition: var(--transition-speed)
+}   
+
+.logo-container{
+   color: var(--secondary-darker);
+   font-weight: 500;
+   font-size: 30px;
+   /* display: none; */
+   text-align: left;
+}
+
+.logo-container a{
+   color: var(--secondary-darker);
+}
+
+.logo-container a:hover{
+   color: var(--secondary-color);
+}
+
+.logo{
+   height: 50px;
+   width: auto;
+   /* outline: 2px solid red; */
+} 
+
+ul {
+   display: flex;
+   justify-content: space-around;
+   /* outline: 2px solid red; */
+}
+
+li {
+   text-decoration: none;
+   color: var(--primary-color);
+   transition: color var(--transition-speed);
+   padding: 0px 30px;
+   
+}
+
+a{
+   font-style: none;
+   color: var(--sub-primary-color);
+   transition: var(--transition-speed);
+}
+
+ul li a:hover, ul li a:focus{
+   color: var(--primary-color);
+   /* text-shadow: var(--text-shadow); */
+}
+.main-container{
+   background-color: var(--var-bg-color);
+   margin: auto;
+   align-self: center;
+   justify-self: center;
+   height: 500px;
+   width: 750px;
+   border-radius: 25px;
+   display:flex;
+   box-shadow: 0px 0px 20px 10px black;
+   outline: 5px solid var(--secondary-darker);
+   text-align: left; 
+}
+
+.info-section{
+   /* width: 300px; */
+   background-color: var(--secondary-darker);
+   border-radius: 25px 0px 0px 25px;
+   flex-basis: 30%;
+
+}
+.contact-section{
+   flex-basis: 70%;
+   background-color: black;
+   background-image: none;
+   border-radius: 0px 25px 25px 0px;
+   padding: 15px;
+}
+
+
 h1 {
-   text-align: center;
-   color: #a8a8a8;
-   @include text-shadow(1px 1px 0 rgba(white, 1));
+   font-size: 30px;
+   color: var(--primary-color);
 }
 
 form {
    max-width: 600px;
-   text-align: center;
-   margin: 20px auto;
+
   
-  input, textarea {
-     border:0; outline:0;
-     padding: 1em;
-     @include border-radius(8px);
-     display: block;
-     width: 100%;
-     margin-top: 1em;
-     font-family: 'Merriweather', sans-serif;
-     @include box-shadow(0 1px 1px rgba(black, 0.1));
-     resize: none;
-    
-    &:focus {
-       @include box-shadow(0 0px 2px rgba($red, 1)!important);
-    }
-  }
   
-  #input-submit {
-     color: white; 
-     background: var(--secondary-color);
-     cursor: pointer;
-    
-    &:hover {
-       @include box-shadow(0 1px 1px 1px rgba(#aaa, 0.6)); 
-    }
-  }
-  
-  textarea {
-      height: 126px;
-  }
 }
+
+input, textarea {
+   border:0; outline:0;
+   padding: 1em;
+   border-radius: 10px;
+   display: block;
+   width: 100%;
+   margin-top: 1em;
+   @include box-shadow(0 1px 1px rgba(black, 0.1));
+   resize: none;
+
+   background-color: rgb(75, 75, 75);
+   color: var(--sub-primary-color);
+   font-family: 'Poppins', 'sans-serif';
+   font-weight: 500;
+
+
+}
+
+input:focus, textarea:focus {
+
+}
+  
+#input-submit {
+   color: var(--primary-color); 
+   background: transparent;
+   border-radius: 10px;
+   border: 3px solid var(--secondary-color);
+   cursor: pointer;
+   transition: var(--transition-speed);
+   font-family: 'Poppins', sans-serif;
+   font-size: 25px;
+   font-weight: 500;
+   padding-top: 5px;
+   height: 50px;
+   text-align: center;
+   width:auto;
+   
+}
+#input-submit:hover {
+   background-color: var(--secondary-color);
+}
+
+
+textarea {
+   height: 126px;
+}
+
 
 
 .half {
   float: left;
-  width: 48%;
-  margin-bottom: 1em;
+  width: 100%;
+  margin-bottom: 2em;
 }
-
-.right { width: 50%; }
 
 .left {
      margin-right: 2%; 
