--- a/Assets/style.css
+++ b/Assets/style.css
@@ -6,17 +6,17 @@ html{
     overflow-x: hidden;
     scroll-behavior: smooth;
 }
+
 *{
     text-decoration: none;
     list-style-type: none;
     list-style: none;
-    box-sizing: border-box;
-    
+    box-sizing: border-box; 
 }
 
 :root{
     --primary-color:white;
-    --sub-primary-color: rgba(255, 255, 255, 0.704);
+    --sub-primary-color: rgb(198, 198, 198);
     --secondary-color: coral;
     --secondary-darker: rgb(205, 86, 42) ;
     --var-bg-color: #020024;
@@ -30,17 +30,21 @@ html{
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
-    background-color: var(--var-bg-color);
-    background-image: url(images/bg-texture.png);
+    /* background-color: var(--var-bg-color);
+    background-image: url(images/bg-texture.png); */
     scroll-behavior: smooth;
+    background-color: #000929;
 }
-
 section {
     display:block;
     height: 125vh;
     width: 100vw;
     padding: 20px 100px 150px;
 }
+
+::selection {
+
+  }
 
 .hero{
     background: url(images/citybg.jpg) no-repeat center center/cover fixed;
@@ -53,33 +57,59 @@ section {
 }
 
 nav {
-    font-size: 25px;
+    font-size: 20px;
     width: 100vw;
-    height: 70px;
-    background-color: var(--var-bg-color);
+    height: 55px;
+    /* background-color: var(--var-bg-color); */
+    background-color: black;
     position: fixed;
     z-index: 10;
-    /* background: linear-gradient(
-    to bottom,
-    var(--var-bg-color)
-    ,#020024b3, transparent
-    ); */
     padding-left: 100px;
     padding-right: 100px;
-    background-image: url(images/bg-texture.png);
-    box-shadow: 0px 5px 10px #000000b7 ;
+    /* background-image: url(images/bg-texture.png); */
+    /* box-shadow: 0px 5px 10px #000000b7 ; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: var(--transition-speed);
 
+}   
+
+.logo-container{
+    color: var(--secondary-darker);
+    font-weight: 500;
+    font-size: 25px;
+    /* display: none; */
+    text-align: center;
 }
+
+.logo-container a{
+    color: var(--secondary-darker);
+    text-align: justify;
+}
+
+.logo-container a:hover{
+    color: var(--secondary-color);
+}
+
+.logo{
+    height: 50px;
+    width: auto;
+    /* outline: 2px solid red; */
+} 
 
 ul {
     display: flex;
     justify-content: space-around;
+    /* outline: 2px solid red; */
 }
 
 li {
     text-decoration: none;
     color: var(--primary-color);
     transition: color var(--transition-speed);
+    padding: 0px 30px;
+    
 }
 
 a{
@@ -88,9 +118,9 @@ a{
     transition: var(--transition-speed);
 }
 
-li a:hover{
+ul li a:hover, ul li a:focus{
     color: var(--primary-color);
-    text-shadow: var(--text-shadow);
+    /* text-shadow: var(--text-shadow); */
 }
 /*-----SCROLLBAR--------*/
 
@@ -156,9 +186,6 @@ p {
 
 }
 
-
-
-
 .button {
     width: 200px;
     height: 55px;
@@ -216,40 +243,44 @@ button{
 
 /*------------ABOUT ME SECTION--------------*/
 .sub-section {
+    padding-top: 20vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     height: 100vh;
     align-items: center;
+    margin-top: 10vh;
+    
+    /* outline: white 3px solid; */
+}
+
+.information{
+
+}
+
+.headshot-container{
+    
 }
 
 .headshot {
     object-fit: cover;
-    align-items: center;
-    height: 35rem;
-    width: 35rem;
-    /* border-radius: 50px; */
+    height: 500px;
+    width: 370px;
+    border-radius: 25px;
     /* border: 5px solid var(--sub-primary-color); */
     margin-left: 30px;
-    margin-top: 20%;
     transition: var(--transition-speed);
-    filter: grayscale();
     flex-basis: 20%;
+
 }
 .information{
     flex-basis: 80%; 
+    padding-right: 70px;
 }
 
 .headshot:hover {
     filter: var(--secondary-color);
-    border: 5px solid var(--secondary-color);
-}
-
-.sub-section-alternative {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    padding: inherit;
-    height: 100vh;
+    box-shadow: 0px 0px 12px 2px var(--secondary-color);
+    transform: scale(1.04);
 }
 
 .information h2 {
@@ -274,117 +305,147 @@ h3{
     font-size: 20px;
     color: var(--secondary-color);
 }
+.main-text{
+    line-height: 4rem;
+    font-size: 20px;
+    font-weight: 350;
+    text-align: left;
+}
 
 .information p{
     color: var(--sub-primary-color);
-    line-height: 4rem;
-    font-size: 20px;
+
+    
+   
 }
 
 .divider{
     height: 3px;
     background-color: var(--sub-primary-color);
     border: none;
-    border-radius: 10px;
+    border-radius: 5px;
+    width: auto;
 }
-.sub-section-alternative{
-   height: auto;
-   
+
+.sub-section-alternative {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    padding: 40px 100px 10px 100px;
+    /* outline: red 1px solid; */
+    margin-top: 10vh;
+    height: auto;
 }
+
 .sub-section-alternative h2 {
     font-size: var(--subheading-size);
-    line-height: 30px;
+    line-height: 15px;
     text-align: left;
-    padding: 0px 100px;
 
 }
+
 hr{
-    width:85%;
+    width:100%;
     height: 3px;
-    background-color: var(--sub-primary-color);
+    background-color: var(--primary-color);
     border: none;
-    border-radius: 10px;
-    margin: auto;
-
-    
-    
+    border-radius: 5px;
 }
+
 .project-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding-left: 100px;
-    padding-right: 100px;
-    height: 80vh;
-    overflow-y: scroll;
-    border-bottom: 2px solid white;
+    justify-content: space-around;
+    height: 100vh;
+    /* border-bottom: 2px solid white; */
     margin: 0;
-    justify-content: center;
+    overflow-y: scroll;
+    padding-bottom: 100px;
+}
+
+.project-container::-webkit-scrollbar-track {
+    display: none;
+  }
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--sub-primary-color);
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+#website-project{
+    order: 4;
+}
+
+#zoom-project{
+    order: 2;
+}
+
+#ebay-project{
+    order: 1;
+}
+
+#-project{
+    order: 9;
 }
 
 .project-card {
     width: 600px;
-    height: 380px;
-    /*box-shadow: 5px 5px 20px rgb(197, 195, 195);*/
-    
-    margin-bottom: 70px;
-    border-radius: 0px;
-    overflow: hidden;
-    transition: var(--transition-speed);
+    height: 426px;
     margin-top: 30px;
-    border-radius: 20px;
-    
+    border-radius: 25px 25px 25px 25px;
+    transition: var(--transition-speed);
+    overflow-y: hidden;
+    margin-bottom: 40px;
+    color: var(--sub-primary-color);
+    background-color: black;
 }
 
-.project-card:hover {
-    /* border: 3px solid white; */
-    /* outline: 3px white solid; */
-    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.59);
-}
-
-
-.project-header p{
-    text-align: center;
-    margin: auto;
-    line-height: 0px;
-    padding-bottom: 40px;
-}
+.project-card:hover{
+    box-shadow: 0px 0px 12px 2px var(--secondary-color);
+    transform: scale(1.04);
+    color: var(--primary-color);
+    /* background-color: var(--secondary-darker); */
+} 
 
 .description-container{
-    background-color: rgb(255, 255, 255);
-    text-align: justify;
-    height: 100px;
-    border:
+    background-color: black;
+    height: 130px;
+    padding: 15px;
+    border-radius: 0px 0px 25px 25px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    overflow: hidden;
+    transition: var(--transition-speed);
+
 }
 
-.project-description{
-    color: black;
-    font-size: 18px;
-    font-weight: 400;   
-    text-align: justify;
+.project-title{
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 3rem;
+    color:var(--secondary-color)
 }
 
-.image-conatiner {
+.description-container .main-text{
+    line-height: 3rem;
+    font-size: 15px;
+    text-align: center;
+}
+
+.image-conatiner{
     width: 100%;
-    height: 50px;
     transition: var(--transition-speed);
 }
 
 .project-image {
     width: 100%;
+    height: 300px;
     object-fit: cover;
-    transition: var(--transition-speed);
+    overflow: hidden;
 }
-
-.project-card h3{
-    font-size: 30px;
-    color: var(--primary-color);
-    font-weight: 550;
-    /* padding-bottom: 40px; */
-    text-shadow: 5px 5px 5px black;
-
-}
-
 
 .subtext {
     font-size: 15px;
@@ -394,26 +455,41 @@ hr{
 /*------------FOOTER/CONTACT SECTION--------------*/
     
 footer {
-    text-align: center;
     padding: auto;
-    height: 80vw;
+    height: 3   0vh;
     padding: 0px 0px 30px ;
+    margin-top: 10vh;
+    /* outline: red 2px solid; */
+    
+
 }
 .footer-container{
+    transform: translateY(-200px);
+    text-align: center;
     padding: 300px;
     margin: auto;
+    height: auto;
+    /* outline: yellow 2px solid; */
 }
 
 .intro-p{
     color: var(--secondary-color);
     margin: 0px;
-    
 }
 
 footer h2{
     color: var(--primary-color);
     margin: 0px;
+    display: flex;
+    justify-content: center;
 
+
+}
+
+footer .main-text{
+    text-align: center;
+    margin-bottom: 25px;
+    color: var(--sub-primary-color);
 }
 
 .footer-button{
@@ -443,17 +519,12 @@ footer h2{
     border: 3px solid transparent;
 }
 
-
-footer p{
-    color: var(--sub-primary-color);
-    margin-bottom: 25px;
-}
-
 .footer-socials{
     display: flex;
     padding-top: 30px;
     justify-content: space-around;
 }
+
 
 
 @media only screen and (max-width: 1000px){ 
@@ -484,8 +555,9 @@ footer p{
     }
 
     nav{
-
+        display: none;
     }
+
     .information p{
         color: var(--sub-primary-color);
         line-height: 50px;
@@ -508,18 +580,30 @@ footer p{
         flex-wrap: wrap;
         padding: 100px 60px;
         height: 100vh;
-        text-align: left;
+        text-align: center;
         height: auto;
     }
 
-    .information{
-        flex-basis: 100%;
+    .sub-section > h2{
+        text-align: center;
     }
+
+
+    .information{
+        /* flex-basis: 100%; */
+        text-align: center;
+        order: 1;
+    }
+
     .headshot-container{
         margin: auto;
+        order: 0;
     }
+
+    
     .information p{
         font-size: 20px;
+        text-align: center;
     }
 
     /*-----PROJECT SECTION------*/
