--- a/Assets/contact_style.css
+++ b/Assets/contact_style.css
@@ -39,7 +39,7 @@ html {
 body {
    font-family: 'Poppins', sans-serif;
    margin: 0;
-   background-color: var(--var-bg-color);
+   /* background-color: var(--var-bg-color); */
    background-image: url(images/contact-bg.jpg);
    height: 100vh;
    width: 100vw;
