--- a/Assets/contact_style.css
+++ b/Assets/contact_style.css
@@ -6,19 +6,19 @@
 :root{
    --primary-color:white;
    --sub-primary-color: rgba(255, 255, 255, 0.704);
-   --secondary-color: coral;
-   --secondary-darker: rgb(205, 86, 42) ;
+   --secondary-color: rgb(241, 96, 44);
+    --secondary-darker: rgb(205, 86, 42) ;
    --var-bg-color: #020024;
    --subheading-size: 50px;
    
 
-   --transition-speed: 200ms ease-in;
+   --transition-speed: 200ms ease-out;
 }
 
 *, 
 *:before, 
 *:after {
-   @include box-sizing(border-box); 
+   box-sizing:border-box; 
 }
 
 html {
@@ -34,6 +34,7 @@ html {
    list-style-type: none;
    list-style: none;
    box-sizing: border-box; 
+   text-decoration-style: none;
 }
 
 body {
@@ -56,6 +57,7 @@ nav {
    height: 55px;
    /* background-color: var(--var-bg-color); */
    background-color: black;
+   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='grey' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
    position: fixed;
    z-index: 10;
    padding-left: 100px;
@@ -68,20 +70,28 @@ nav {
    transition: var(--transition-speed)
 }   
 
+a{
+   color: black;
+}
+
 .logo-container{
    color: var(--secondary-darker);
    font-weight: 500;
-   font-size: 30px;
+   font-size: 25px;
    /* display: none; */
    text-align: left;
+   letter-spacing: 3px;
+   
 }
 
 .logo-container a{
    color: var(--sub-primary-color);
+   transition: var(--transition-speed);
 }
 
 .logo-container a:hover{
    color: var(--primary-color);
+   
 }
 
 .logo{
@@ -92,19 +102,18 @@ nav {
 
 ul {
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
    /* outline: 2px solid red; */
 }
 
 li {
    text-decoration: none;
    color: var(--primary-color);
-   transition: color var(--transition-speed);
-   padding: 0px 30px;
+   margin-left: 80px;
    
 }
 
-a{
+li a{
    font-style: none;
    color: var(--sub-primary-color);
    transition: var(--transition-speed);
@@ -122,8 +131,8 @@ ul li a:hover, ul li a:focus{
    width: 750px;
    border-radius: 25px;
    display:flex;
-   box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.676);
-   outline: 5px solid var(--secondary-darker);
+   box-shadow: 0px 0px 10px 8px rgba(0, 0, 0, 0.47);
+   outline: 5px solid var(--secondary-color);
    text-align: left; 
    background-color: #0f0026;
    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%2306006b' fill-opacity='0.57' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
@@ -132,13 +141,35 @@ ul li a:hover, ul li a:focus{
 
 .info-section{
    /* width: 300px; */
-   background-color: var(--secondary-darker);
-   border-radius: 25px 0px 0px 25px;
-   flex-basis: 30%;
-   width: 100px;
+   background-color: var(--secondary-color);
+   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='grey' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+
+   border-radius: 0px 25px 25px 0px;
+   flex-basis: 25%;
+
    
+   order: 2;
+
+   height: 100%;
+   font-size: 15px;
+   color: rgb(0, 0, 0);
+   padding: 10px;
+   font-weight: bold;
+   
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   align-items: center; 
+   text-align: center;
 
 }
+
+.info-section svg{
+   height: 35px;
+}
+
+
+
 .contact-section{
    flex-basis: 70%;
    background-image: none;
@@ -172,23 +203,21 @@ input, textarea {
    margin-top: 1em;
    @include box-shadow(0 1px 1px rgba(black, 0.1));
    resize: none;
-
-   background-color: var(--primary-color);
-   color: black;
+   background-color: black;
+   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='grey' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+   color: var(--primary-color);
    font-family: 'Poppins', 'sans-serif';
    font-weight: 500;
-
 
 }
 
 input:focus, textarea:focus {
-
+   border: var(--sub-primary-color) 2px solid;
 }
   
 #input-submit {
    color: var(--primary-color); 
-   background: transparent;
-   border-radius: 10px;
+   border-radius: 14px;
    border: 3px solid var(--secondary-color);
    cursor: pointer;
    transition: var(--transition-speed);
@@ -199,10 +228,21 @@ input:focus, textarea:focus {
    height: 50px;
    text-align: center;
    width:auto;
+   transition: var(--transition-speed);
+   background-color: rgba(0, 0, 0, 0);
+   backdrop-filter: blur(3px); 
    
 }
 #input-submit:hover {
    background-color: var(--secondary-color);
+   box-shadow: -5px 5px 8px 1px rgba(0, 0, 0, 0.352);
+   transform: translateX(10px);
+}
+
+#input-submit:active{
+   background-color: var(--secondary-darker);
+   border: 3px solid var(--secondary-darker);
+
 }
 
 
@@ -222,14 +262,6 @@ textarea {
      margin-right: 2%; 
 }
 
-.info-section{
-   height: 100%;
-   font-size: 15px;
-   text-align: left;
-   color: rgb(255, 255, 255);
-   align-items: center;
-   padding: 20px;
-}
 
 
 
