--- a/Assets/style.css
+++ b/Assets/style.css
@@ -41,7 +41,7 @@ body {
 section {
     display:block;
     width: 100vw;
-    padding: 20px 100px 150px;
+    padding: 0px 100px 100px;
 }
 
 ::selection {
@@ -67,8 +67,7 @@ nav {
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='grey' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
     position: fixed;
     z-index: 10;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding: 0 100px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -83,12 +82,12 @@ a{
     font-weight: 500;
     font-size: 25px;
     /* display: none; */
-    text-align: center;
+    letter-spacing: 3px;
+    
 }
 
 .logo-container a{
-    color: var(--primary-color);
-    text-align: justify;
+    text-align: left;
     transition: var(--transition-speed);
 }
 
@@ -105,15 +104,17 @@ a{
 
 ul {
     display: flex;
-    justify-content: space-around;
-    /* outline: 2px solid red; */
+    justify-content: space-between;
+     /* outline: 2px solid red;  */
 }
 
 li {
     text-decoration: none;
     color: var(--primary-color);
     transition: color var(--transition-speed);
-    padding: 0px 30px;
+    /* margin: 0px 40px 0px; */
+    margin-left: 80px;
+    
     
 }
 
@@ -202,7 +203,7 @@ span{
     padding-left: 10px;
     padding-right: 10px;
     height: 55px;
-    border-radius: 10px;
+    border-radius: 15px;
     /* background-color: var(--secondary-color); */
     text-align: center;
     font-size: 25px;
@@ -212,23 +213,34 @@ span{
     border: 3.5px solid var(--secondary-color);
     overflow: hidden;
     transition: var(--transition-speed);
-    backdrop-filter: blur(5px); 
+    backdrop-filter: blur(3px); 
     font-style: none;
     cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.235)
+    
     color: var(--primary-color);
 
 }
 
+.button img{
+    margin-left: 5px;
+}
+
+#resume{
+    background-color: var(--secondary-color);
+}
 .wide-button{
     margin-left: 20px;
+    background-color: rgba(0, 0, 0, 0.137);
 }
 
 .button:hover {
-    box-shadow: -5px 5px 6px 1px rgba(0, 0, 0, 0.534);
+    box-shadow: -5px 5px 8px 1px rgba(0, 0, 0, 0.352);
     /* transform: scale(1.02); */
     transform: translateY(-5px);
+    backdrop-filter: blur(0px);
     background-color: var(--secondary-color);
+
+    /* background-color: var(--secondary-color); */
 
 }
 
@@ -245,19 +257,18 @@ span{
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 200px;
+    height: 300px;
 
 }
 
-.social svg{
+.socials img{
     fill: var(--sub-primary-color);
-    transition: var(--transition-speed)
+    height: 40px;
+    width: 40px;
+    transition: var(--transition-speed);
+    
 }
 
-.social svg:hover{
-    fill: var(--primary-color);
-
-}
 
 /*------------ABOUT ME SECTION--------------*/
 .sub-section {
