--- a/Assets/style.css
+++ b/Assets/style.css
@@ -112,9 +112,7 @@ li {
     text-decoration: none;
     color: var(--primary-color);
     transition: color var(--transition-speed);
-    /* margin: 0px 40px 0px; */
     margin-left: 80px;
-    
     
 }
 
@@ -178,8 +176,8 @@ span{
     line-height: 5px;
     padding: 0px;
     margin-top: 0px;    
-    font-size: 35px;
-    font-weight: 400;
+    font-size: 36.6px;
+    font-weight: 500;
     color: rgba(255, 255, 255, 0.704);
 }
 
@@ -196,6 +194,7 @@ span{
 .hero-prompts{
     display: flex;
     justify-content: left;
+    margin-top: 40px;
 }
 
 .button {
@@ -257,7 +256,8 @@ span{
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 300px;
+    height: 350px;
+    margin-right: 35px;
 
 }
 
