--- a/Assets/style.css
+++ b/Assets/style.css
@@ -151,7 +151,7 @@ center{
 }
 
 h1 {
-    font-size: 100px;
+    font-size: 90px;
     margin: 0;
     color: var(--primary-color);
     text-shadow: 0px 0px 15px rgba(0, 0, 0, 0.726);
@@ -176,7 +176,7 @@ span{
     line-height: 5px;
     padding: 0px;
     margin-top: 0px;    
-    font-size: 36.6px;
+    font-size: 32px;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.704);
 }
@@ -215,7 +215,7 @@ span{
     backdrop-filter: blur(3px); 
     font-style: none;
     cursor: pointer;
-    
+    transform: scale(.9) translateX(-9px);
     color: var(--primary-color);
 
 }
@@ -228,16 +228,16 @@ span{
     background-color: var(--secondary-color);
 }
 .wide-button{
-    margin-left: 20px;
+    margin-left: 0px;
     background-color: rgba(0, 0, 0, 0.137);
 }
 
 .button:hover {
     box-shadow: -5px 5px 8px 1px rgba(0, 0, 0, 0.352);
-    /* transform: scale(1.02); */
-    transform: translateY(-5px);
+    transform: translateX(1px) scale(.9) translateY(-3px);
     backdrop-filter: blur(0px);
     background-color: var(--secondary-color);
+  
 
     /* background-color: var(--secondary-color); */
 
@@ -374,9 +374,10 @@ h3{
     display: flex;
     flex-direction: column;
     text-align: center;
-    padding: 30px 100px 0px 100px;
+    padding: 30px 100px;
     /* outline: red 1px solid; */
     height: auto;
+    /* outline: 2px solid red; */
 }
 
 .sub-section-alternative h2 {
@@ -398,10 +399,10 @@ hr{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    height: 100vh;
+    height: auto;
     /* border-bottom: 2px solid white; */
     margin: 0;
-    overflow-y: scroll;
+  
     /* padding-bottom: 100px; */
 }
 
@@ -443,6 +444,7 @@ hr{
     color: var(--sub-primary-color);
     background-color: black;
     overflow: hidden;
+    box-shadow: -10px 10px 8px rgba(0, 0, 0, 0.272);
     
 }
 
@@ -512,45 +514,39 @@ hr{
 /*------------FOOTER/CONTACT SECTION--------------*/
     
 footer {
-    display:none;
-    padding: auto;
-    height: 3   0vh;
-    padding: 0px 0px 30px ;
-    margin-top: 10vh;
+    display:block;
+    height:auto;
+    padding: 20px 100px ;
     /* outline: red 2px solid; */
-    
-
+    background: url(images/contact-bg.jpg) no-repeat center center/cover fixed;
+    overflow: hidden;
+    /* outline: 2px rgb(17, 0, 255) solid; */
 }
 .footer-container{
-    transform: translateY(-200px);
-    text-align: center;
-    padding: 300px;
-    margin: auto;
     height: auto;
+    text-align: left;
     /* outline: yellow 2px solid; */
+    width:40vw;
+    float: left;
+    /* outline: 2px solid red; */
+    
 }
 
 footer h2{
     color: var(--primary-color);
-    margin: 0px;
-    display: flex;
-    justify-content: center;
-
-
+    line-height: 0;
 }
 
 footer .main-text{
-    text-align: center;
-    margin-bottom: 25px;
     color: var(--sub-primary-color);
 }
 
 .footer-button{
-    width: auto;
-    height: 55px;
-    border-radius: 10px;
-    background-color: transparent;
+    height: 50px;
+    width: 400px;
     text-align: center;
+    border-radius: 14px;
+    background-color: transparent;
     font-size: 25px;
     font-weight: 300;
     padding-top: 5px;
@@ -558,7 +554,8 @@ footer .main-text{
     border: 3px solid var(--secondary-color);
     overflow: hidden;
     transition: var(--transition-speed);
-    margin: 0 auto;
+    font-style: none;
+    
 }
 
 .footer-button:hover{
@@ -576,6 +573,7 @@ footer .main-text{
     display: flex;
     padding-top: 30px;
     justify-content: space-around;
+    display: none;
 }
 
 
