--- a/Assets/style.css
+++ b/Assets/style.css
@@ -46,7 +46,8 @@ section {
 
 .hero{
     position: relative;
-    background: url(images/citybg.jpg) no-repeat center center/cover fixed;
+    background: rgba(0, 0, 0, 0.2)url(images/citybg.jpg) no-repeat center center/cover fixed;
+    background-blend-mode: darken;
     height: 100vh;
     width: 100%;
     padding-top: 100px;
